samples/_failures_safe/1761137489_0bc4d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81b6ce16.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_81b6ce16.c:168:9: error: expected declaration or statement at end of input
  168 |         parser_advance(parser);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_81b6ce16.c:168:9: error: expected declaration or statement at end of input
